# router/app.go
@@ -27,5 +27,6 @@ func Router() *gin.Engine {
 	r.GET("/addmsga", service.AddMessageByAdmin)
 	r.GET("/updatemsg", service.UpdateInfoStatus)
 	r.GET("/getmsg", service.GetMessage)
+	r.GET("/getdoing", service.Getdoing)
 	return r
 }
